# AndroidRustDemo

./: build.gradle.kts  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/example/android/rustdemo/: MainActivity.kt
app/src/main/java/com/example/android/rustdemo/ui/theme/: Color.kt  Theme.kt  Type.kt
encrypt/: build.gradle.kts
encrypt/rust/: Cargo.toml
encrypt/rust/src/: lib.rs  main.rs
encrypt/rust/src/sm3/: hash.rs
encrypt/src/main/java/com/example/android/encrypt/: NdkMore.kt  ProviderJNI.kt
gradle/wrapper/: gradle-wrapper.properties
