[package]
name = "brencrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
chrono = "0.4.31"
log = "0.4.14"
# https://docs.rs/crate/android_logger/0.13.3
android_logger = "0.13.3"

[lib]
crate_type = ["staticlib", "cdylib"]
